--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -1,33 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+        <title>ProjAspect Overlay</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='server.css') }}" type="text/css"> 
-        <script type="text/javascript" src="{{ url_for('static', filename='server.js') }}"></script>
-        <title>TODO Title</title>
-        <meta name="description" content="TODO Page description">
+        <script src="https://extension-files.twitch.tv/helper/v1/twitch-ext.min.js"></script>
     </head>
     <body>
-        <header>
-            <h1>TODO Title</h1>
-            <nav>
-
-            </nav>
-        </header>
-        <main>
-            <section>
-                <h2>TODO Subtitle</h2>
-
-            </section>
-            <section>
-                <h2>TODO Subtitle</h2>
-
-            </section>
-        </main>
-        <footer>
-
-        </footer>
+        <div id="arrowholder">
+            {% for dir in ['left', 'down', 'up', 'right'] %}
+                <img onclick="move_request('{{dir}}')" src="{{ url_for('static', filename=dir + '-arrow.svg') }}" id="{{dir + 'arrow'}}" width="100" height="100"></img>
+            {% endfor %}
+        </div>
+        <script type="text/javascript" src="{{ url_for('static', filename='arrow.js') }}"></script>
+        <!-- <script type="text/javascript" src="{{ url_for('static', filename='twitch.js') }}"></script> -->
     </body>
 </html>
