--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -3,16 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>ProjAspect Overlay</title>
-        <link rel="stylesheet" href="{{ url_for('static', filename='server.css') }}" type="text/css"> 
+        <link rel="stylesheet" href="../static/server.css" type="text/css"> 
         <script src="https://extension-files.twitch.tv/helper/v1/twitch-ext.min.js"></script>
     </head>
     <body>
         <div id="arrowholder">
-            {% for dir in ['left', 'down', 'up', 'right'] %}
-                <img onclick="move_request('{{dir}}')" src="{{ url_for('static', filename=dir + '-arrow.svg') }}" id="{{dir + 'arrow'}}" width="100" height="100"></img>
-            {% endfor %}
+            <img onclick="move_request('left')" src="../static/left-arrow.svg" id="leftarrow}}" width="100" height="100"></img>
+            <img onclick="move_request('down')" src="../static/down-arrow.svg" id="downarrow}}" width="100" height="100"></img>
+            <img onclick="move_request('up')" src="../static/up-arrow.svg" id="uparrow}}" width="100" height="100"></img>
+            <img onclick="move_request('right')" src="../static/right-arrow.svg" id="rightarrow}}" width="100" height="100"></img>
         </div>
-        <script type="text/javascript" src="{{ url_for('static', filename='arrow.js') }}"></script>
-        <!-- <script type="text/javascript" src="{{ url_for('static', filename='twitch.js') }}"></script> -->
+        <script type="text/javascript" src="../static/arrow.js"></script>
     </body>
 </html>
