--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -8,10 +8,12 @@
     </head>
     <body>
         <div id="arrowholder">
-            <img onclick="move_request('left')" src="../static/left-arrow.svg" id="leftarrow}}" width="100" height="100"></img>
-            <img onclick="move_request('down')" src="../static/down-arrow.svg" id="downarrow}}" width="100" height="100"></img>
-            <img onclick="move_request('up')" src="../static/up-arrow.svg" id="uparrow}}" width="100" height="100"></img>
-            <img onclick="move_request('right')" src="../static/right-arrow.svg" id="rightarrow}}" width="100" height="100"></img>
+            <img onclick="move_request('left');add_arrow('left')" src="../static/left-arrow.svg" id="leftarrow}}" width="100" height="100"></img>
+            <img onclick="move_request('down');add_arrow('down')" src="../static/down-arrow.svg" id="downarrow}}" width="100" height="100"></img>
+            <img onclick="move_request('up');add_arrow('up')" src="../static/up-arrow.svg" id="uparrow}}" width="100" height="100"></img>
+            <img onclick="move_request('right');add_arrow('right')" src="../static/right-arrow.svg" id="rightarrow}}" width="100" height="100"></img>
+        </div>
+        <div id ="actionqueue">
         </div>
         <script type="text/javascript" src="../static/arrow.js"></script>
     </body>
