--- a/flask/static/server.css
+++ b/flask/static/server.css
@@ -9,6 +9,12 @@ html {
 
 #actionqueue {
 	position: fixed;
-	bottom:0;
+	bottom:70px;
 	right:0;
+}
+
+#undo {
+	position: fixed;
+	bottom: 50px;
+	right: 0;
 }
